# invoice-ai-demo

./: .gitignore  main.py  manager.py  pyproject.toml
agents_tools/: completion_agent.py  pdf_generation_agent.py  validation_agent.py
models/: Invoice.py
test/: test_pdf_generation_agent.py  test_printer.py
